--- a/easy/style.css
+++ b/easy/style.css
@@ -1,6 +1,10 @@
 @import "https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css";
 @import "https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css";
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@500&display=swap');
+:root{
+    --primary: rgb(8, 197, 255);
+    --primary-shadow: rgba(0, 162, 255, 0.856);
+}
 body{
     height: 100vh;
     background-color: #efefef;
@@ -12,10 +16,10 @@ body{
     background-color: rgb(255, 255, 255);
     width: 90%;
     max-width: 375px;
-    box-shadow: 0px 2px 2px 0px rgba(0, 153, 255, 0.699),
-    0px 3px 1px -2px rgba(0, 153, 255, 0.699),
+    box-shadow: 0px 2px 2px 0px var(--primary-shadow),
+    0px 3px 1px -2px var(--primary-shadow),
     
-           0px 1px 5px 0px rgba(0, 153, 255, 0.699);
+           0px 1px 5px 0px var(--primary-shadow);
 }
 .card{
     box-shadow: none;
@@ -40,4 +44,13 @@ h4{
 audio{
     width: 100%;
     margin-top: 30px;
+}
+#play-pause{
+    background-color: rgb(8, 197, 255);
+}
+#vol{
+    color: var(--primary);
+}
+input[type="range"]::-webkit-slider-thumb{
+    background-color: var(--primary);
 }
